--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<head><title>Digital Service Delivery - Powered by Strategy & Standards</title></head>
+<head><title>Digital Service Delivery - Powered by Strategy &amp; Standards</title></head>
 <body bgcolor="#000000">
 <img alt="Embedded Image" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAABUkAAALwCAYAAACqfvQKAAAAAXNSR0IArs4c6QAAAARnQU1BAACx
 jwv8YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAP+lSURBVHhe7L2Htm23cWb99+mcc845kKJIyZLs
